# minecraft-servers-tmux-wrapper

./: Cargo.toml  README.md  fabric-servers-wrapper-bluemap.socket  fabric-servers-wrapper.service  fabric-servers-wrapper.socket
src/: bluemap.rs  config.rs  connect.rs  main.rs  minecraft_client.rs  server_description.json  socket.rs  tmux.rs
