[package]
name = "fabric-servers-tmux-wrapper"
description = "Verify XMRigISO server signatures using Ed25519"
authors = ["2025 Lucca Pellegrini <lucca@verticordia.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
atomic_enum = "0.3.0"
clap = { version = "4.0.0", features = ["derive"] }
clap_complete = "4.0.0"
curl = "0.4"
dirs = "6.0.0"
env_logger = "0.9"
include-flate = "0.3"
license = "3.6"
log = "0.4"
nix = { version = "0.30.1", features = ["process", "signal"] }
once_cell = "1.20"
openssl = "0.10"
regex = "1.11.1"
socks = "0.3"
tokio = { version = "1", features = ["full"] }
valence_protocol = { git = "https://github.com/valence-rs/valence", features = ["compression", "encryption"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
